--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-     <title>Bienvenido a Hyperblog 2.0</title>
+     <title>Bienvenidos a Hyperblog 2.0</title>
      <link rel="stylesheet" href="CSS/Estilos.css">
     </head>
     <body>
